add likes and dislikes and fix up ui a bit
